# nexus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .p10k.zsh  .zshrc  CMakeLists.txt  CMakeSettings.json  Cargo.toml  CppProperties.json  Jenkinsfile  README.md  clean-build  conanfile.py  conanfile.txt  config.sh  dependencies.cmake  glib.sln  init.vim  install.sh  run  settings.cmake  todo.md  vimhelp.md
.junie/: AGENTS.md  config.json  guidelines.md
aia/: CMakeLists.txt  README.md  dev-guide.md  download-model.sh  main.cpp
aia/training/: README.md  pyproject.toml  requirements.txt  train_lora.py
baldr/: CMakeLists.txt  builder.cpp  builder.hpp  command.ex.cpp  command.hpp  config.cpp  config.hpp  config.test.cpp  docker.cpp  docker.hpp  main.cpp
baldr-cpp/: CMakeLists.txt  conanfile.txt  dependencies.cmake  install.cmake
baldr-cpp/baldr/: CMakeLists.txt  builder.cpp  builder.hpp  command.hpp  config.cpp  config.hpp  docker.cpp  docker.hpp  line_reader.hpp  line_reader.test.cpp  log.cpp  log.hpp  main.cpp  progress.cpp  progress.hpp  regression.test.cpp  test.cmake  tty.cpp  tty.hpp  tty.test.cpp  tui_debug.hpp  utils.cpp  utils.hpp
baldr/testdata/: Makefile
baldr/tests/: run.sh
baldr/tests/cmake-project/: CMakeLists.txt  main.cpp
baldr/tests/cmake-project/src/: main.cpp
baldr/tests/make-project/: hello  main.cpp
btx/: CMakeLists.txt  main.cpp
cfg/: .p10k.zsh  .tmux.conf  .zshrc  alias.zsh  build.zsh  config.sh  functions.zsh  init.vim  init5.vim  install-lsps.sh  run-docker.sh  variables.zsh
chaiscripts/: functions.cpp  guiScript.chai  main.cpp  script.chai  test.chai  tutorial.chai
chaiscripts/chaiengine/: CMakeLists.txt  functions.h  main.cpp
ci/: build.sh  deploy.sh  lint.sh  pre-checks.sh  run.sh  test.sh
cmake/: Conan.cmake  compilerWarnings.cmake  conan.cmake  config.cmake.in  gitVersion.cmake  install.cmake  nexusConfig.cmake  settings.cmake  test.cmake
console/: CFrame.h  CMakeLists.txt  Console.cpp  Console.vcxproj  Console.vcxproj.filters  datatable_test.cpp  measuring.cpp  ml_test.cpp  pfm.hpp
doc/: baldr.adoc  btx.md  developer-guide.adoc  perf-linux-vs-win.adoc  user-guide.adoc
env/: Dockerfile.build  Dockerfile.env  Dockerfile.jenkins  build-devenv.sh  build-jenkins.sh  cfgenv.sh  env.Dockerfile  install-lsps.sh  load.zsh  rpi-setup.sh  run-devenv.sh  run-jenkins.sh
example-gui/: CMakeLists.txt  main.cc
example-project/: CMakeLists.txt  README.md  conan.cmake  conanfile.txt
example-project/env/: Dockerfile
example-project/src/: CMakeLists.txt  main.cc
gGfx/: CMakeLists.txt  ClassDiagram.cd  frames.cpp  frames.h  gGfx.cpp  gGfx.h  gGfx.vcxproj  gGfx.vcxproj.filters  pch.h
gclib/: CMakeLists.txt  args.h  fs.h  main.c
glib/: CMakeLists.txt  PerformanceTest.xlsx  arg.cpp  arg.h  bigint.h  datatable.cpp  gmath.h  (+12 more)
libbtx/: CMakeLists.txt  btx.cpp  btx.h  btx.hpp  btx.test.cpp  btx_cbindings.cpp  decoder.cpp  decoder.hpp  descriptor.cpp  descriptor.hpp  descriptor.test.cpp  generator.cpp  generator.hpp  test.cmake
libbtx/details/: btx_helpers.hpp  btx_helpers.test.cpp
liblexy/: CMakeLists.txt  decoder.cpp  decoder.hpp  descriptor.cpp  descriptor.hpp  descriptor.test.cpp  generator.cpp  generator.hpp  lxy_parser.cpp  lxy_parser.test.cpp  test.cmake
libnxs/: CMakeLists.txt  args.hpp  args.test.cpp  line_reader.hpp  line_reader.test.cpp  refl.hpp  refl.test.cpp  rlog.cpp  rlog.ex.cpp  rlog.hpp  tty.cpp  tty.hpp  tty.test.cpp
rust/: Cargo.toml  Dockerfile  README.md
rust/nrs/: Cargo.toml
rust/nrs/src/: gui.rs  lib.rs  utils.rs
rust/nrs/tests/: meta.rs
rust/nrs_app/: Cargo.toml
rust/nrs_app/src/: main.rs
rust/nrs_meta/: Cargo.toml
rust/nrs_meta/src/: lib.rs
rust/src/: main.rs  server.rs
rust/tests/: tcp_server.py
src/: CMakeLists.txt  chai_bindings.cc  chai_bindings.h  flatmap.cpp2  gui.cc  gui.h  main.cc  main.cpp2  pathtracer.cc  pathtracer.h  ph.cc  ph.cxx  pt_app.cc  sample.chai  sandbox.py  types.h
src/asm/: hello.asm
src/bench/: CMakeLists.txt  math.cc
src/console/: CMakeLists.txt  Console.cpp  Console.vcxproj  Console.vcxproj.filters  ml_test.cpp  pfm.hpp  worklog.cpp
src/gGfx/: CMakeLists.txt  frames.cpp  frames.h  gGfx.cpp  gGfx.h  gGfx.vcxproj.filters  pch.h
src/gclib/: args.c  fs.c
src/glib/: CMakeLists.txt  arg.cpp  arg.h  bigint.cpp  bigint.h  datatable.cpp  datatable.h  datetime.cpp  datetime.h  gmath.cpp  gmath.h  io.cpp  io.h  ml.hpp  utility.cpp  utility.h  utility_t.hpp
src/glib/py/: crypto.py  logger.py  s.py  ui.py
src/libgs/: libgs.h  libgs.vcxproj  libgs.vcxproj.filters
src/ncx/: CMakeLists.txt  arg.cpp  arg.h  datetime.cpp  datetime.h  expr.h  gui.h  io.cpp  io.h  linkedList.h  matrix.h  units.h  utility.cpp  utility.h
src/ncx/test/: CMakeLists.txt  test_allocator.cpp  test_datetime.cpp  test_expr.cpp  test_io_tokenizer.cpp  test_linkedList.cpp  test_units.cpp  test_utility.cpp
src/nhs/: nhs.cabal
src/nhs/src/: Alg.hs  Gen.hs  Io.hs  Main.hs  Types.hs
src/npx/: dash.py  ui.py
src/nrx/: Cargo.toml
src/nrx/src/: hit.rs  lib.rs  main.rs  matrix.rs  pathtracer.rs  ray.rs  scene.rs  screen.rs  sphere.rs  test_matrix.rs  test_pathtracer.rs  vector.rs
src/nrx/src/tests/: test_pathtracer.rs  utils.rs
src/pt/: CMakeLists.txt  pathtracer.cc  pathtracer.h
src/rpg/: rpg.cpp  rpg.h  rpg.vcxproj.filters
src/rts/: game.cpp  game.h
src/spotify/: app.js  package.json  spotify.sh
src/tools/: CMakeLists.txt  bench.cpp  gui.cpp  sandbox.cpp  sandbox_measure.h  sandbox_pmr.h  worklog.cpp
src/ui/: CMakeLists.txt  action.h  elements.cpp  elements.h  input.cpp  input.h  menu.cpp  menu.h  message.cpp  message.h  ncg.h  types.h  ui.cpp  ui.h
test/: CMakeLists.txt  detector.cc  expected.cc  flat_map.cc  nexus.cc  units.cc
tests/: CMakeLists.txt  annotation.sh  btx.sh  c-bindings.sh  descriptor.sh  log-mode.sh  msg-gen.sh  rolling-window.sh  run.sh  sample.sh  stdout.sh  test.cpp  test_allocator.cpp  test_datetime.cpp  test_detector.cpp  test_io.cpp  test_io_json.cpp  test_io_tokenizer.cpp  test_msg_gen.sh  test_units.cpp  test_utility.cpp  tester.cpp
(+130 files in other folders)
