[workspace]

members = [
    "nxs",
    "nrs-app",
    "nrs-meta"
]

resolver = "2"

[patch.crates-io]
nxs = { path = "nxs" }
nrs_meta = { path = "nrs-meta" }

imgui = { path = "deps/imgui-rs/imgui" }
imgui-winit-support = { path = "deps/imgui-rs/imgui-winit-support" }
imgui-glium-renderer = { path = "deps/imgui-rs/imgui-glium-renderer" }