[package]
name = "nrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nrs_meta = "0.1.0"
imgui = "0.11.0"
imgui-winit-support = "0.11.0"
imgui-glium-renderer = "0.11.0"
glium = "0.34.0"
obj = "0.10.2"